fix bug with translate operation box in users on mobile device

--- a/src/main/resources/static/assets/scss/dashboard.scss
+++ b/src/main/resources/static/assets/scss/dashboard.scss
@@ -63,7 +63,7 @@ h2 {
 			width: calc(100vw - 300px);
 			max-height: 97vh;
 			overflow-y: auto;
-			
+
 			.title {
 				margin-top: 30px;
 				padding: 20px 10px;
@@ -234,10 +234,12 @@ h2 {
 									transition: transform 0.3s ease;
 								}
 
-								&:hover {
-									cursor: pointer;
-									padding-left: 100px;
-									transform: translateX(120px);
+								@media (hover: hover) and (pointer: fine) {
+									&:hover {
+										cursor: pointer;
+										padding-left: 100px;
+										transform: translateX(120px);
+									}
 								}
 
 								&.clicked {
@@ -268,10 +270,12 @@ h2 {
 									}
 								}
 
-								&:hover {
-									cursor: pointer;
-									padding-left: 200px;
-									transform: translateX(240px);
+								@media (hover: hover) and (pointer: fine) {
+									&:hover {
+										cursor: pointer;
+										padding-left: 200px;
+										transform: translateX(240px);
+									}
 								}
 
 								&.clicked {
